Testing/TestCache/test42.txt
Error trace on line: 2, column: 5 in module test42.
inl a = dyn 1
    ^
Error trace on line: 3, column: 5 in module test42.
inl b = dyn 2
    ^
Error trace on line: 4, column: 5 in module test42.
inl c = dyn 3
    ^
Error trace on line: 5, column: 1 in module test42.
4 + type 0
^
Error trace on line: 5, column: 3 in module test42.
4 + type 0
  ^
Error trace on line: 126, column: 11 in module Core.
inl (+) a b = !Add(a,b)
          ^
Error trace on line: 126, column: 15 in module Core.
inl (+) a b = !Add(a,b)
              ^
An attempt to manifest a raw type has been made.
Got: type (int64)
